--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@types/node": "^16.7.10",
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "soap": "^0.42.0"
   }
 }
